# pytest_demo

./: .gitignore  README.md  pytest.ini  setup.cfg  setup.py
src/our_namespace/pytest_demo/: add.py  gener.py
tests/pytest_demo/: conftest.py  test_1_add.py  test_2_gener_basic.py  test_3_gener_fixt.py  test_4_gener_mock.py  test_5_mark.py
