[metadata]
name = our_namespace.pytest_demo
description = pytest demonstration
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://gitlab.local/pytest_demo # fake
author = juogon
author_email = juogon@gmail.com
keywords =
    pytest
description_file = README.md
platforms = any

classifiers =
    Development Status :: 5 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.8

[options]
zip_safe = false
packages = find_namespace:
include_package_data = true
python_requires = >= 3.8
package_dir =
    =src

setup_requires =
    setuptools>=46.0.0
    wheel


install_requires =
    importlib-metadata; python_version<"3.8"
    numpy

[options.packages.find]
where = src
exclude =
    tests
    
[options.extras_require]
tests = pytest; pytest-cov

[bdist_wheel]
universal = true

[check]
metadata = true
# restructuredtext = true
strict = true

[sdist]
formats = zip, gztar

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = kokoko.my_package.module:function
# For example:
# console_scripts =
#     fibonacci = kokoko.my_package.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension


[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = sdist,bdist_wheel

[flake8]
max-line-length = 99
extend_ignore = E203, W503
doctests = True
exclude =
    .git
    .eggs
    __pycache__
    tests/
    docs/
    build/
    dist/
    .tox
    docs/conf.py
